--- a/stacks/gluster-storage/gluster-daemonset.yml.j2
+++ b/stacks/gluster-storage/gluster-daemonset.yml.j2
@@ -45,7 +45,7 @@ metadata:
   name: shared-volume
 spec:
   capacity:
-    storage: 10G
+    storage: {{gluster_vol_size}}
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
