--- a/stacks/gluster-storage/glusterfs.yml.j2
+++ b/stacks/gluster-storage/glusterfs.yml.j2
@@ -1,18 +1,4 @@
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: gluster-server
-spec:
-  selector:
-    k8s-app: gluster-server
-  clusterIP: None
-  ports:
-  - name: dummy
-    targetPort: 1
-    port: 1
-
----
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -33,10 +19,24 @@ spec:
       terminationGracePeriodSeconds: 60
       containers:
       - name: gluster-server
-        image: kubenow/gluster-server
+        image: kubenow/gluster-server:dev-daemon
         imagePullPolicy: Always
         securityContext:
           privileged: true
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: gluster-server
+spec:
+  selector:
+    k8s-app: gluster-server
+  clusterIP: None
+  ports:
+  - name: dummy
+    targetPort: 1
+    port: 1
 
 ---
 apiVersion: v1
